# spydus-cli

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
src/spydus_cli/: __init__.py  cli.py  client.py  output.py
tests/: conftest.py  test_bot.py  test_output.py
